<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/toplayout"
        android:background="@color/colorOrange"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingBottom="25dp"
        android:paddingLeft="5dp"
        android:paddingTop="25dp" >

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/memoadd_title"
            android:textColor="@color/colorWhite"
            android:id="@+id/title_text1" />
        <EditText android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorBlueLight"
            android:hint="@string/memoadd_hint_title"
            android:layout_toRightOf="@+id/title_text1"
            android:background="@android:color/transparent"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_toLeftOf="@+id/btn_Memo_Save"
            android:layout_toStartOf="@+id/btn_Memo_Save" />

        <ImageButton
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:id="@+id/btn_Memo_Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTrans"
            android:src="@android:drawable/ic_menu_save"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/datelayout"
        android:layout_below="@+id/toplayout"
        android:background="@android:color/transparent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/notelist_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:textSize="18sp" />
    </RelativeLayout>

    <view
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/datelayout"
        class="com.example.administrator.ffff.MemoAddActivity$LineEditText"
        android:background="@android:color/transparent"
        android:capitalize="sentences"
        android:fadingEdge="vertical"
        android:gravity="top"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:textColor="#000000"
        android:textSize="22sp"
        android:hint="@string/memoadd_hint_body"
        android:focusable="true"
        android:autoLink="web|phone|email" />
</RelativeLayout>
